# UAV-System

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  docker-compose.yml  docker.sh  entrypoint.sh  ros_entrypoint.sh  ros_entrypoint_jetson.sh
install/: local_setup.sh  setup.sh
install/base_controller/share/base_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/base_controller/: setup.cfg  setup.py
src/base_controller/base_controller/: controller.py
src/base_controller/config/: mavros_config.yaml
src/base_controller/launch/: start_controller.launch.py
src/behavior_package/: package.xml  setup.cfg  setup.py
src/behavior_package/behavior_package/: navigate_node.py
src/drone_communication/: package.xml  setup.cfg  setup.py
src/drone_communication/config/: params.yaml
src/drone_communication/drone_communication/: offboard_control_node.py
src/drone_communication/drone_communication/scripts/: __init__.py  mission.py  mission_takeoff_move_land.py
src/drone_communication/launch/: mavros.launch.py
src/interface_package/: CMakeCache.txt  CMakeLists.txt  package.xml
src/interface_package/action/: Land.action  NavigateWaypoints.action  Takeoff.action
src/interface_package/launch/: interface_launch.py  px4_custom_launch.py
src/interface_package/src/: interface_node.cpp  land_action.cpp  move_command_service.cpp  navigate_waypoints_action.cpp  takeoff_action.cpp
src/interface_package/src/include/interface_package/: interface_node.hpp  land_action.hpp  move_command_service.hpp  navigate_waypoints_action.hpp  takeoff_action.hpp
src/interface_package/srv/: SetMission.srv
src/mission_package/: package.xml  setup.cfg  setup.py
src/mission_package/mission_package/: mission_node.py
src/mission_package/mission_package/missions/: __init__.py  mission.py  task1.py  task2.py  task3.py  task4.py
src/teleop_package/: package.xml  setup.cfg  setup.py
src/teleop_package/teleop_package/: teleop_node.py
