<?xml version="1.0"?>
<package format="3">
  <name>interface_package</name>
  <version>0.0.0</version>
  <description>Package that manages drone control and services</description>
  <maintainer email="thxssio@gmail.com">thxssio</maintainer>
  <license>Apache License 2.0</license>

  <!-- Dependências -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>sensor_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
