<?xml version="1.0"?>
<package format="3">
  <name>teleop_package</name>
  <version>0.0.0</version>
  <description>Teleoperation package for controlling the drone via keyboard.</description>
  <maintainer email="thxssio@gmail.com">thxssio</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_python</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>interface_package</exec_depend> 

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
